@@ -1,13 +1,13 @@
 package me.pafias.pffa.npcs.local;
 
-import com.destroystokyo.paper.profile.PlayerProfile;
-import com.destroystokyo.paper.profile.ProfileProperty;
-import com.github.retrooper.packetevents.PacketEvents;
-import com.github.retrooper.packetevents.manager.server.ServerVersion;
+import com.comphenix.protocol.ProtocolLibrary;
 import com.google.common.util.concurrent.ThreadFactoryBuilder;
 import lombok.Getter;
 import me.pafias.pffa.npcs.NpcManager;
 import me.pafias.pffa.npcs.local.packets.*;
+import me.pafias.pffa.npcs.local.profile.GameProfile;
+import me.pafias.pffa.npcs.local.profile.Property;
+import me.pafias.pffa.npcs.local.profile.PropertyMap;
 import me.pafias.pffa.objects.Kit;
 import me.pafias.pffa.objects.Spawn;
 import me.pafias.pffa.objects.User;
@@ -16,16 +16,15 @@ import me.pafias.pffa.objects.gui.SpawnMenu;
 import me.pafias.pffa.pFFA;
 import me.pafias.pffa.services.KitManager;
 import me.pafias.pffa.services.SpawnManager;
+import me.pafias.pffa.util.Serializer;
 import me.pafias.putils.BukkitPlayerManager;
-import me.pafias.putils.CC;
-import me.pafias.putils.builders.PlayerProfileBuilder;
-import net.kyori.adventure.text.Component;
-import net.kyori.adventure.text.serializer.plain.PlainTextComponentSerializer;
+import me.pafias.putils.LCC;
+import me.pafias.putils.builders.GameProfileBuilder;
 import org.bukkit.Location;
 import org.bukkit.OfflinePlayer;
 import org.bukkit.configuration.file.FileConfiguration;
 import org.bukkit.configuration.file.YamlConfiguration;
-import org.bukkit.entity.Entity;
+import org.bukkit.entity.LivingEntity;
 import org.bukkit.event.HandlerList;
 import org.jetbrains.annotations.Nullable;
 
@@ -35,6 +34,7 @@ import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.stream.Collectors;
 
 public class LocalNpcManager implements NpcManager {
 
@@ -55,17 +55,22 @@ public class LocalNpcManager implements NpcManager {
 
         this.executor = Executors.newFixedThreadPool(2, new ThreadFactoryBuilder().setNameFormat("pFFA-LocalNpcManager-%d").build());
 
-        final ServerVersion version = PacketEvents.getAPI().getServerManager().getVersion();
-        if (version.isOlderThan(ServerVersion.V_1_17))
-            throw new IllegalStateException("Failed to load Local NPC Manager: The server version is older than 1.17");
-        else if (version.isOlderThan(ServerVersion.V_1_19_3))
-            packetHandler = new PacketHandler1_17(); // 1.17 - 1.19.3
-        else if (version.isOlderThan(ServerVersion.V_1_20_2))
-            packetHandler = new PacketHandler1_19_3(); // 1.19.3 - 1.20.2
-        else if (version.isOlderThan(ServerVersion.V_1_21_3))
-            packetHandler = new PacketHandler1_20_2(); // 1.20.2 - 1.21.3
+        if (plugin.parseVersion() >= 16)
+            packetHandler = new PacketHandler1_16(); // 1.16
+        else if (plugin.parseVersion() >= 15)
+            packetHandler = new PacketHandler1_15(); // 1.15 - 1.16
+        else if (plugin.parseVersion() >= 14)
+            packetHandler = new PacketHandler1_14(); // 1.14 - 1.15
+        else if (plugin.parseVersion() >= 10)
+            packetHandler = new PacketHandler1_10(); // 1.10 - 1.14
+        else if (plugin.parseVersion() >= 9)
+            packetHandler = new PacketHandler1_9(); // 1.9 - 1.10
+        else if (plugin.parseVersion() >= 8)
+            packetHandler = new PacketHandler1_8(); // 1.8 - 1.9
+        else if (plugin.parseVersion() >= 7)
+            packetHandler = new PacketHandler1_7(); // 1.7 - 1.8
         else
-            packetHandler = new PacketHandler1_21_3(); // 1.21.3 - latest
+            throw new IllegalStateException("Failed to load Local NPC Manager: The server version is not supported");
 
         file = new File(plugin.getDataFolder(), "npcs.yml");
         if (!file.exists()) file.createNewFile();
@@ -76,17 +81,17 @@ public class LocalNpcManager implements NpcManager {
             try {
                 final UUID uuid = UUID.fromString(key);
                 final String name = config.getString(key + ".name");
-                final Set<ProfileProperty> properties = new HashSet<>();
+                final PropertyMap properties = new PropertyMap();
                 if (config.isConfigurationSection(key + ".properties")) {
                     for (String propertyKey : config.getConfigurationSection(key + ".properties").getKeys(false)) {
                         final String value = config.getString(key + ".properties." + propertyKey + ".value");
                         if (value == null) continue;
                         final String signature = config.getString(key + ".properties." + propertyKey + ".signature");
-                        properties.add(new ProfileProperty(propertyKey, value, signature));
+                        properties.put(propertyKey, new Property(propertyKey, value, signature));
                     }
                 }
-                final Component nametag = CC.a(config.getString(key + ".nametag"));
-                final Location location = config.getLocation(key + ".location");
+                final String nametag = LCC.t(config.getString(key + ".nametag"));
+                final Location location = Serializer.parseConfigLocation(config, key + ".location");
                 final String kitName = config.getString(key + ".kit");
                 final Kit kit = kitName != null ? kitManager.getKit(kitName) : null;
                 createNpc(uuid, name, properties, nametag, location, kit, false);
@@ -97,7 +102,7 @@ public class LocalNpcManager implements NpcManager {
         }
 
         listener = new LocalNpcListener(plugin, this);
-        PacketEvents.getAPI().getEventManager().registerListener(listener);
+        ProtocolLibrary.getProtocolManager().addPacketListener(listener);
         plugin.getServer().getPluginManager().registerEvents(listener, plugin);
 
         visibilityTask = new VisibilityTask(this);
@@ -113,52 +118,53 @@ public class LocalNpcManager implements NpcManager {
      * Creates a new NPC with the proper name and skin.
      */
     @Override
-    public void createNpc(Component npcName, String npcSkinPlayerName, Location location, @Nullable Kit kit) {
+    public void createNpc(String npcName, String npcSkinPlayerName, Location location, @Nullable Kit kit) {
         final OfflinePlayer skinPlayer = BukkitPlayerManager.getOfflinePlayerByName(npcSkinPlayerName);
-        final PlayerProfile skinProfile = new PlayerProfileBuilder()
+        final GameProfile skinProfile = new GameProfile(new GameProfileBuilder()
                 .setUuid(skinPlayer.getUniqueId())
                 .setName(skinPlayer.getName())
                 .setFetchProperties(true)
-                .build();
-        final String cleanName = PlainTextComponentSerializer.plainText().serializeOr(npcName, "");
-        final PlayerProfile profile = new PlayerProfileBuilder()
-                .setName(cleanName)
-                .setUuid(UUID.nameUUIDFromBytes(cleanName.getBytes()))
-                .setProperties(skinProfile.getProperties())
-                .build();
+                .build());
+        final GameProfile profile = new GameProfile(GameProfileBuilder.fromHandle(skinProfile.getHandle())
+                .setUuid(UUID.nameUUIDFromBytes(npcName.getBytes()))
+                .setName(npcName)
+                .build());
         createNpc(profile, npcName, location, kit, true);
     }
 
     /**
      * Creates a new NPC with the given UUID and name, disregarding skin (lookups)
      */
-    public void createNpc(UUID npcUuid, String npcName, Set<ProfileProperty> properties, Component nametag, Location location, @Nullable Kit kit, boolean save) {
-        final PlayerProfile profile = new PlayerProfileBuilder()
-                .setUuid(npcUuid)
-                .setName(npcName)
-                .setFetchProperties(false)
-                .build();
+    public void createNpc(UUID npcUuid, String npcName, PropertyMap properties, String nametag, Location location, @Nullable Kit kit, boolean save) {
+        final GameProfileBuilder builder = new GameProfileBuilder();
+        builder.setUuid(npcUuid);
+        builder.setName(npcName);
         if (properties != null)
-            profile.setProperties(properties);
+            for (Map.Entry<String, Collection<Property>> entry : properties.asMap().entrySet())
+                for (Property property : entry.getValue())
+                    builder.putProperty(property.getName(), property.getValue(), property.getSignature());
+        final GameProfile profile = new GameProfile(builder.build());
         createNpc(profile, nametag, location, kit, save);
     }
 
     /**
      * Creates a new NPC with the given profile
      */
-    public void createNpc(PlayerProfile profile, Component nametag, Location location, @Nullable Kit kit, boolean save) {
-        final FakeNpc npc = new FakeNpc(executor, packetHandler, profile, nametag, location, kit);
+    public void createNpc(GameProfile profile, String nametag, Location location, @Nullable Kit kit, boolean save) {
+        final FakeNpc npc = new FakeNpc(executor, packetHandler, packetHandler.getNextEntityId(), profile, nametag, location, kit);
         npcs.put(npc.getProfile().getId(), npc);
 
         if (save) {
             config.set(npc.getProfile().getId().toString() + ".name", npc.getProfile().getName());
-            profile.getProperties().forEach(property -> {
-                config.set(npc.getProfile().getId().toString() + ".properties." + property.getName() + ".value", property.getValue());
-                if (property.isSigned())
-                    config.set(npc.getProfile().getId().toString() + ".properties." + property.getName() + ".signature", property.getSignature());
+            profile.getProperties().asMap().forEach((name, propertyList) -> {
+                for (Property property : propertyList) {
+                    config.set(npc.getProfile().getId().toString() + ".properties." + property.getName() + ".value", property.getValue());
+                    if (property.hasSignature())
+                        config.set(npc.getProfile().getId().toString() + ".properties." + property.getName() + ".signature", property.getSignature());
+                }
             });
-            config.set(npc.getProfile().getId().toString() + ".nametag", CC.serialize(nametag));
-            config.set(npc.getProfile().getId().toString() + ".location", npc.getLocation());
+            config.set(npc.getProfile().getId().toString() + ".nametag", nametag);
+            config.set(npc.getProfile().getId().toString() + ".location", Serializer.locationToConfig("location", npc.getLocation()));
             if (kit != null)
                 config.set(npc.getProfile().getId().toString() + ".kit", kit.getName());
             try {
@@ -176,7 +182,7 @@ public class LocalNpcManager implements NpcManager {
                 .filter(npc -> npc.getLocation().getWorld().equals(location.getWorld()) &&
                         npc.getLocation().distanceSquared(location) < 3.0)
                 .sorted(Comparator.comparingDouble(npc -> npc.getLocation().distanceSquared(location)))
-                .toList();
+                .collect(Collectors.toList());
         if (possibleNpcs.isEmpty()) throw new IllegalArgumentException("No NPC found near the specified location.");
         final FakeNpc npc = possibleNpcs.get(0);
         npc.destroyForAll();
@@ -191,7 +197,7 @@ public class LocalNpcManager implements NpcManager {
     }
 
     @Override
-    public boolean trigger(@Nullable Entity entity, String entityName, User user, boolean leftClick) {
+    public boolean trigger(@Nullable LivingEntity entity, String entityName, User user, boolean leftClick) {
         assert entity == null; // Entity is only used for Citizens NPCs
         if (entityName != null && kitManager.exists(entityName)) {
             // Clicked on Kit npc
@@ -235,7 +241,7 @@ public class LocalNpcManager implements NpcManager {
         for (final FakeNpc npc : npcs.values())
             npc.destroyForAll();
         npcs.clear();
-        PacketEvents.getAPI().getEventManager().unregisterListener(listener);
+        ProtocolLibrary.getProtocolManager().removePacketListener(listener);
         HandlerList.unregisterAll(listener);
         executor.shutdown();
         plugin.getLogger().info("Local NPC Manager shut down.");
